# SPL-Task3

./: README.md  readme.txt
Client/: CMakeLists.txt
Client/include/: SocketReceiver.h  connectionHandler.h  socketSender.h
Client/src/: Client.cpp  SocketReceiver.cpp  connectionHandler.cpp  socketSender.cpp
Server/src/main/java/bgu/spl/net/api/: MessageEncoderDecoder.java
Server/src/main/java/bgu/spl/net/api/bidi/: BidiMessagingProtocol.java  Connections.java  Server.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: BGSEncoderDecoder.java  BGSProtocol.java  ConnectionsImpl.java  DataBase.java  ReactorMain.java  TPCMain.java  User.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/messages/: AckMessage.java  BlockMessage.java  ErrorMessage.java  FollowMessage.java  LogStatMessage.java  LoginMessage.java  LogoutMessage.java  Message.java  NotificationMessage.java  PMMessage.java  PostMessage.java  RegisterMessage.java  StatMessage.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java
